compiler/testData/cli/jvm/apiVersion.out
compiler/testData/cli/jvm/apiVersion.kt:2:19: error: unresolved reference: isInstance
    String::class.isInstance(42)
                  ^
COMPILATION_ERROR
