compiler/testData/cli/jvm/apiVersion.kt
fun test() {
    String::class.isInstance(42)
}
